add join form (#14)
* join form

* Rename subscription checkbox

* fake commit to trigger deployment

* update texts

* add space

* fix the privacy policy link

* add custom page for formspark redirects

* use an absolute link for confirmation page

* test customising formspark page

* change params for correct form

* use absolute url (relative isn’t working)

Co-authored-by: Jury Razumau <jury.razumau@zendesk.com>

--- a/ui/assembly.njk
+++ b/ui/assembly.njk
@@ -1,6 +1,6 @@
 ---
 layout: content
-pageTitle: Запись трансляции Учредительного Собрания
+pageTitle: Запись трансляции Учредительного собрания
 eleventyComputed:
   pageDescription: "{{ index_page.Lead }}"
 ---
