link discipline form from contact page

--- a/ui/contact.njk
+++ b/ui/contact.njk
@@ -17,6 +17,10 @@ eleventyComputed:
       и мы постараемся ответить как можно быстрее.
     </p>
 
+    <p class="uk-text-lead">
+      Написать обращение в дисциплинарную группу можно напрямую <a href="/discipline" >на этой странице</a>.
+    </p>
+
     <form action="https://submit-form.com/29rLotZk" class="uk-form-stacked" method="post">
 
       <div class="uk-grid uk-child-width-1-1 uk-child-width-1-2@s">
