--- a/ui/_includes/layout.njk
+++ b/ui/_includes/layout.njk
@@ -39,13 +39,15 @@ bodyElements: 2
   <footer class="uk-section uk-section-muted uk-section-small">
     <div class="uk-container uk-text-small uk-text-muted">
       <div class="uk-grid uk-grid-divider uk-child-width-expand@s" uk-grid>
-        <div class="uk-first-column">
-          <ul class="uk-nav uk-column-1-2 uk-margin-bottom uk-margin-remove-bottom@s">
+        <div class="uk-margin-remove-left uk-child-width-1-2" uk-grid>
+          <ul class="uk-nav uk-margin-bottom uk-margin-remove-bottom@s">
             {% for item in menu %}
               <li>
                 <a href="{{ item.link }}">{{ item.title }}</a>
               </li>
             {% endfor %}
+          </ul>
+          <ul class="uk-nav uk-margin-bottom uk-margin-remove-bottom@s">
             {% for item in externalMenu %}
               <li>
                 <a href="{{ item.link }}">{{ item.title }}</a>
