--- a/ui/vision.njk
+++ b/ui/vision.njk
@@ -6,7 +6,7 @@ eleventyComputed:
 ---
 
 <section class="uk-section uk-section-default">
-  <div class="uk-container">
+  <div class="uk-container content-container">
     <article class="uk-article">
       <h1 class="uk-article-title">{{ manifest.Title }}</h1>
       {% if manifest.Lead %}<p class="uk-text-lead">{{ manifest.Lead }}</p>{% endif %}
