--- a/ui/doc.njk
+++ b/ui/doc.njk
@@ -11,7 +11,7 @@ eleventyComputed:
 ---
 
 <section class="uk-section uk-section-default">
-  <div class="uk-container">
+  <div class="uk-container content-container">
     <article class="uk-article">
       <h1 class="uk-article-title">{{ doc.Title }}</h1>
       <p class="uk-article-meta">{{ doc.Date | date }}</p>
