--- a/ui/statute-version.njk
+++ b/ui/statute-version.njk
@@ -11,7 +11,7 @@ eleventyComputed:
 ---
 
 <section class="uk-section uk-section-default">
-  <div class="uk-container">
+  <div class="uk-container content-container">
     <ul class="uk-subnav uk-subnav-pill">
       {% for version in statute.texts  %}
         <li
