add content-container to p as well

--- a/ui/p.njk
+++ b/ui/p.njk
@@ -11,7 +11,7 @@ eleventyComputed:
 ---
 
 <section class="uk-section uk-section-default">
-  <div class="uk-container">
+  <div class="uk-container content-container">
     <article class="uk-article">
       <h1 class="uk-article-title">{{ p.Title }}</h1>
       {% if p.Lead %}<p class="uk-text-lead">{{ p.Lead }}</p>{% endif %}
